# output-length-prediction

./: .gitignore  CLAUDE.md  INSTRUCTIONS.md  README.md  main.py  pyproject.toml
src/predictable/: explore_training_data.ipynb  generate.py  utils.py
src/predictable/data_generation/: README.md  explore_training_data.ipynb  generate.py  prompts.py  utils.py
src/predictable/data_generation/00_same_prompt/: README.md  generate.py  visualize.ipynb
src/predictable/data_generation/01_different_prompts/: README.md  generate.py  visualize.ipynb
src/predictable/data_generation/02_same_prompt_multi_layers/: README.md  generate.py  visualize.ipynb
src/predictable/experiments/: README.md  __init__.py  test_utils.py  utils.py
src/predictable/experiments/e00_linear/: README.md  __init__.py  test_interactive.py  train.py
src/predictable/experiments/e01_mlp/: README.md  __init__.py  test_interactive.py  train.py
src/predictable/probes/: linear.py  prompt.txt  test_interactive.py
src/predictable/probes/linear/: linear.py  test_interactive.py
src/predictable/probes/mlp/: __init__.py  mlp.py  test_interactive.py
